# trs-bot

./: .env.example  Dockerfile  README.md  pyproject.toml
src/: __init__.py  archive.py  bot.py  config.py  handler.py  handlers.py  logging.py  main.py  schemas.py  subs.py  utils.py
src/log/: config.py
