[project]
name = "trs-bot"
version = "0.0.1"
description = "TRS is a service for finding news stories from streams, storing and analyzing them. TRS-bot is a service that sends notifications to telegram channels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "faststream[rabbit]>=0.5.48",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.11",
    "structlog>=25.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
